--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,10 +20,10 @@ AM_CFLAGS =\
 bin_PROGRAMS = kyrc
 
 kyrc_SOURCES = \
-	kyrc.vala config.vapi client.vala
+	kyrc.vala config.vapi client.vala sqlclient.vala server_manager.vala
 
 kyrc_VALAFLAGS =  \
-	--pkg gtk+-3.0 --pkg glib-2.0 --pkg gee-0.8 -g --save-temps
+	--pkg gtk+-3.0 --pkg glib-2.0 --pkg gee-0.8 --pkg granite --pkg sqlite3 -g --save-temps
 
 
 kyrc_LDFLAGS = \
