Loading channels from sidebar but needs more work

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,23 +10,23 @@ assetsdir = $(pkgdatadir)/assets
 assets_DATA = assets/server_run.png
 
 AM_CPPFLAGS = \
-	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
-	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
-	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\" \
+    -DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
+    -DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
+    -DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\" \
     -DGETTEXT_PACKAGE=\""kyrc"\"\
-	$(KYRC_CFLAGS)
+    $(KYRC_CFLAGS)
 
 AM_CFLAGS =\
-	 -Wall\
-	 -g
+     -Wall\
+     -g
 
 bin_PROGRAMS = kyrc
 
 kyrc_SOURCES = \
-	config.vapi kyrc.vala connection.vala sqlclient.vala server_manager.vala channel_tab.vala message.vala
+    config.vapi connection.vala kyrc.vala sqlclient.vala server_manager.vala channel_tab.vala message.vala
 
 kyrc_VALAFLAGS =  \
-	--pkg gtk+-3.0 --pkg glib-2.0 --pkg gee-0.8 --pkg granite --pkg sqlite3 --target-glib 2.32  -g --save-temps --Xcc=-X --Xcc=-w
+    --pkg gtk+-3.0 --pkg glib-2.0 --pkg gee-0.8 --pkg granite --pkg sqlite3 --target-glib 2.32  -g --save-temps --Xcc=-X --Xcc=-w
 
 
 kyrc_LDFLAGS = \
