--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -346,7 +346,7 @@ kyrc_SOURCES = \
     config.vapi connection.vala main_window.vala sqlclient.vala server_manager.vala channel_tab.vala message.vala irc.vala kyrc.vala rich_text.vala
 
 kyrc_VALAFLAGS = \
-    --target-glib 2.32 --pkg x11 --pkg gtk+-3.0 --pkg glib-2.0 --pkg granite --pkg sqlite3  -g --save-temps
+    -X -DGETTEXT_PACKAGE="kyrc" --target-glib 2.32 --pkg x11 --pkg gtk+-3.0 --pkg glib-2.0 --pkg granite --pkg sqlite3  -g --save-temps
 
 kyrc_LDFLAGS = \
 	-lX11 -lm -Wl,--export-dynamic
