--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,7 +4,7 @@
 
 
 uidir = $(pkgdatadir)/ui
-ui_DATA = ui/kyrc.ui ui/server_window.ui
+ui_DATA = ui/relay.ui ui/server_window.ui
 
 assetsdir = $(pkgdatadir)/assets
 assets_DATA = assets/server_run.png
@@ -13,26 +13,26 @@ AM_CPPFLAGS = \
     -DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
     -DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
     -DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\" \
-    -DGETTEXT_PACKAGE=\""kyrc"\"\
-    $(KYRC_CFLAGS)
+    -DGETTEXT_PACKAGE=\""relay"\"\
+    $(RELAY_CFLAGS)
 
 AM_CFLAGS =\
      -Wall\
      -g
 
-bin_PROGRAMS = kyrc
+bin_PROGRAMS = relay
 
-kyrc_SOURCES = \
-    config.vapi connection.vala main_window.vala sqlclient.vala server_manager.vala channel_tab.vala message.vala irc.vala kyrc.vala rich_text.vala
+relay_SOURCES = \
+    config.vapi connection.vala main_window.vala sqlclient.vala server_manager.vala channel_tab.vala message.vala irc.vala relay.vala rich_text.vala
 
-kyrc_VALAFLAGS =  \
-    -X -DGETTEXT_PACKAGE="kyrc" --target-glib 2.32 --pkg x11 --pkg gtk+-3.0 --pkg glib-2.0 --pkg granite --pkg sqlite3  -g --save-temps
+relay_VALAFLAGS =  \
+    -X -DGETTEXT_PACKAGE="relay" --target-glib 2.32 --pkg x11 --pkg gtk+-3.0 --pkg glib-2.0 --pkg granite --pkg sqlite3  -g --save-temps
 
 
-kyrc_LDFLAGS = \
+relay_LDFLAGS = \
 	-lX11 -lm -Wl,--export-dynamic
 
-kyrc_LDADD = $(KYRC_LIBS)
+relay_LDADD = $(RELAY_LIBS)
  
 
 
