--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -79,12 +79,12 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-bin_PROGRAMS = kyrc$(EXEEXT)
+bin_PROGRAMS = relay$(EXEEXT)
 subdir = src
 DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am connection.c \
 	main_window.c sqlclient.c server_manager.c channel_tab.c \
-	message.c irc.c kyrc.c rich_text.c $(top_srcdir)/depcomp \
-	$(srcdir)/--save-temps $(srcdir)/kyrc_vala.stamp
+	message.c irc.c relay.c rich_text.c $(top_srcdir)/depcomp \
+	$(srcdir)/--save-temps $(srcdir)/relay_vala.stamp
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
@@ -96,20 +96,20 @@ CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(assetsdir)" \
 	"$(DESTDIR)$(uidir)"
 PROGRAMS = $(bin_PROGRAMS)
-am_kyrc_OBJECTS = connection.$(OBJEXT) main_window.$(OBJEXT) \
+am_relay_OBJECTS = connection.$(OBJEXT) main_window.$(OBJEXT) \
 	sqlclient.$(OBJEXT) server_manager.$(OBJEXT) \
 	channel_tab.$(OBJEXT) message.$(OBJEXT) irc.$(OBJEXT) \
-	kyrc.$(OBJEXT) rich_text.$(OBJEXT)
-kyrc_OBJECTS = $(am_kyrc_OBJECTS)
+	relay.$(OBJEXT) rich_text.$(OBJEXT)
+relay_OBJECTS = $(am_relay_OBJECTS)
 am__DEPENDENCIES_1 =
-kyrc_DEPENDENCIES = $(am__DEPENDENCIES_1)
+relay_DEPENDENCIES = $(am__DEPENDENCIES_1)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
 am__v_lt_0 = --silent
 am__v_lt_1 = 
-kyrc_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) \
+relay_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) \
 	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
-	$(kyrc_LDFLAGS) $(LDFLAGS) -o $@
+	$(relay_LDFLAGS) $(LDFLAGS) -o $@
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -152,8 +152,8 @@ AM_V_VALAC = $(am__v_VALAC_@AM_V@)
 am__v_VALAC_ = $(am__v_VALAC_@AM_DEFAULT_V@)
 am__v_VALAC_0 = @echo "  VALAC   " $@;
 am__v_VALAC_1 = 
-SOURCES = $(kyrc_SOURCES)
-DIST_SOURCES = $(kyrc_SOURCES)
+SOURCES = $(relay_SOURCES)
+DIST_SOURCES = $(relay_SOURCES)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -238,8 +238,6 @@ INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
-KYRC_CFLAGS = @KYRC_CFLAGS@
-KYRC_LIBS = @KYRC_LIBS@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
 LIBOBJS = @LIBOBJS@
@@ -269,6 +267,8 @@ PKG_CONFIG = @PKG_CONFIG@
 PKG_CONFIG_LIBDIR = @PKG_CONFIG_LIBDIR@
 PKG_CONFIG_PATH = @PKG_CONFIG_PATH@
 RANLIB = @RANLIB@
+RELAY_CFLAGS = @RELAY_CFLAGS@
+RELAY_LIBS = @RELAY_LIBS@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
@@ -328,30 +328,30 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 uidir = $(pkgdatadir)/ui
-ui_DATA = ui/kyrc.ui ui/server_window.ui
+ui_DATA = ui/relay.ui ui/server_window.ui
 assetsdir = $(pkgdatadir)/assets
 assets_DATA = assets/server_run.png
 AM_CPPFLAGS = \
     -DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
     -DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
     -DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\" \
-    -DGETTEXT_PACKAGE=\""kyrc"\"\
-    $(KYRC_CFLAGS)
+    -DGETTEXT_PACKAGE=\""relay"\"\
+    $(RELAY_CFLAGS)
 
 AM_CFLAGS = \
      -Wall\
      -g
 
-kyrc_SOURCES = \
-    config.vapi connection.vala main_window.vala sqlclient.vala server_manager.vala channel_tab.vala message.vala irc.vala kyrc.vala rich_text.vala
+relay_SOURCES = \
+    config.vapi connection.vala main_window.vala sqlclient.vala server_manager.vala channel_tab.vala message.vala irc.vala relay.vala rich_text.vala
 
-kyrc_VALAFLAGS = \
-    -X -DGETTEXT_PACKAGE="kyrc" --target-glib 2.32 --pkg x11 --pkg gtk+-3.0 --pkg glib-2.0 --pkg granite --pkg sqlite3  -g --save-temps
+relay_VALAFLAGS = \
+    -X -DGETTEXT_PACKAGE="relay" --target-glib 2.32 --pkg x11 --pkg gtk+-3.0 --pkg glib-2.0 --pkg granite --pkg sqlite3  -g --save-temps
 
-kyrc_LDFLAGS = \
+relay_LDFLAGS = \
 	-lX11 -lm -Wl,--export-dynamic
 
-kyrc_LDADD = $(KYRC_LIBS)
+relay_LDADD = $(RELAY_LIBS)
 EXTRA_DIST = $(ui_DATA) $(assets_DATA)
 all: all-am
 
@@ -437,9 +437,9 @@ clean-binPROGRAMS:
 	echo " rm -f" $$list; \
 	rm -f $$list
 
-kyrc$(EXEEXT): $(kyrc_OBJECTS) $(kyrc_DEPENDENCIES) $(EXTRA_kyrc_DEPENDENCIES) 
-	@rm -f kyrc$(EXEEXT)
-	$(AM_V_CCLD)$(kyrc_LINK) $(kyrc_OBJECTS) $(kyrc_LDADD) $(LIBS)
+relay$(EXEEXT): $(relay_OBJECTS) $(relay_DEPENDENCIES) $(EXTRA_relay_DEPENDENCIES) 
+	@rm -f relay$(EXEEXT)
+	$(AM_V_CCLD)$(relay_LINK) $(relay_OBJECTS) $(relay_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -450,9 +450,9 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/channel_tab.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/connection.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/irc.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/kyrc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main_window.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/message.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/relay.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rich_text.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/server_manager.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sqlclient.Po@am__quote@
@@ -477,59 +477,59 @@ distclean-compile:
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	$(AM_V_CC)source='$<' object='$@' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(AM_V_CC@am__nodep@)$(LTCOMPILE) -c -o $@ $<
-$(srcdir)/connection.c: $(srcdir)/kyrc_vala.stamp
-	@if test -f $@; then :; else rm -f $(srcdir)/kyrc_vala.stamp; fi
+$(srcdir)/connection.c: $(srcdir)/relay_vala.stamp
+	@if test -f $@; then :; else rm -f $(srcdir)/relay_vala.stamp; fi
 	@if test -f $@; then :; else \
-	  $(MAKE) $(AM_MAKEFLAGS) $(srcdir)/kyrc_vala.stamp; \
+	  $(MAKE) $(AM_MAKEFLAGS) $(srcdir)/relay_vala.stamp; \
 	fi
-$(srcdir)/main_window.c: $(srcdir)/kyrc_vala.stamp
-	@if test -f $@; then :; else rm -f $(srcdir)/kyrc_vala.stamp; fi
+$(srcdir)/main_window.c: $(srcdir)/relay_vala.stamp
+	@if test -f $@; then :; else rm -f $(srcdir)/relay_vala.stamp; fi
 	@if test -f $@; then :; else \
-	  $(MAKE) $(AM_MAKEFLAGS) $(srcdir)/kyrc_vala.stamp; \
+	  $(MAKE) $(AM_MAKEFLAGS) $(srcdir)/relay_vala.stamp; \
 	fi
-$(srcdir)/sqlclient.c: $(srcdir)/kyrc_vala.stamp
-	@if test -f $@; then :; else rm -f $(srcdir)/kyrc_vala.stamp; fi
+$(srcdir)/sqlclient.c: $(srcdir)/relay_vala.stamp
+	@if test -f $@; then :; else rm -f $(srcdir)/relay_vala.stamp; fi
 	@if test -f $@; then :; else \
-	  $(MAKE) $(AM_MAKEFLAGS) $(srcdir)/kyrc_vala.stamp; \
+	  $(MAKE) $(AM_MAKEFLAGS) $(srcdir)/relay_vala.stamp; \
 	fi
-$(srcdir)/server_manager.c: $(srcdir)/kyrc_vala.stamp
-	@if test -f $@; then :; else rm -f $(srcdir)/kyrc_vala.stamp; fi
+$(srcdir)/server_manager.c: $(srcdir)/relay_vala.stamp
+	@if test -f $@; then :; else rm -f $(srcdir)/relay_vala.stamp; fi
 	@if test -f $@; then :; else \
-	  $(MAKE) $(AM_MAKEFLAGS) $(srcdir)/kyrc_vala.stamp; \
+	  $(MAKE) $(AM_MAKEFLAGS) $(srcdir)/relay_vala.stamp; \
 	fi
-$(srcdir)/channel_tab.c: $(srcdir)/kyrc_vala.stamp
-	@if test -f $@; then :; else rm -f $(srcdir)/kyrc_vala.stamp; fi
+$(srcdir)/channel_tab.c: $(srcdir)/relay_vala.stamp
+	@if test -f $@; then :; else rm -f $(srcdir)/relay_vala.stamp; fi
 	@if test -f $@; then :; else \
-	  $(MAKE) $(AM_MAKEFLAGS) $(srcdir)/kyrc_vala.stamp; \
+	  $(MAKE) $(AM_MAKEFLAGS) $(srcdir)/relay_vala.stamp; \
 	fi
-$(srcdir)/message.c: $(srcdir)/kyrc_vala.stamp
-	@if test -f $@; then :; else rm -f $(srcdir)/kyrc_vala.stamp; fi
+$(srcdir)/message.c: $(srcdir)/relay_vala.stamp
+	@if test -f $@; then :; else rm -f $(srcdir)/relay_vala.stamp; fi
 	@if test -f $@; then :; else \
-	  $(MAKE) $(AM_MAKEFLAGS) $(srcdir)/kyrc_vala.stamp; \
+	  $(MAKE) $(AM_MAKEFLAGS) $(srcdir)/relay_vala.stamp; \
 	fi
-$(srcdir)/irc.c: $(srcdir)/kyrc_vala.stamp
-	@if test -f $@; then :; else rm -f $(srcdir)/kyrc_vala.stamp; fi
+$(srcdir)/irc.c: $(srcdir)/relay_vala.stamp
+	@if test -f $@; then :; else rm -f $(srcdir)/relay_vala.stamp; fi
 	@if test -f $@; then :; else \
-	  $(MAKE) $(AM_MAKEFLAGS) $(srcdir)/kyrc_vala.stamp; \
+	  $(MAKE) $(AM_MAKEFLAGS) $(srcdir)/relay_vala.stamp; \
 	fi
-$(srcdir)/kyrc.c: $(srcdir)/kyrc_vala.stamp
-	@if test -f $@; then :; else rm -f $(srcdir)/kyrc_vala.stamp; fi
+$(srcdir)/relay.c: $(srcdir)/relay_vala.stamp
+	@if test -f $@; then :; else rm -f $(srcdir)/relay_vala.stamp; fi
 	@if test -f $@; then :; else \
-	  $(MAKE) $(AM_MAKEFLAGS) $(srcdir)/kyrc_vala.stamp; \
+	  $(MAKE) $(AM_MAKEFLAGS) $(srcdir)/relay_vala.stamp; \
 	fi
-$(srcdir)/rich_text.c: $(srcdir)/kyrc_vala.stamp
-	@if test -f $@; then :; else rm -f $(srcdir)/kyrc_vala.stamp; fi
+$(srcdir)/rich_text.c: $(srcdir)/relay_vala.stamp
+	@if test -f $@; then :; else rm -f $(srcdir)/relay_vala.stamp; fi
 	@if test -f $@; then :; else \
-	  $(MAKE) $(AM_MAKEFLAGS) $(srcdir)/kyrc_vala.stamp; \
+	  $(MAKE) $(AM_MAKEFLAGS) $(srcdir)/relay_vala.stamp; \
 	fi
-$(srcdir)/--save-temps: $(srcdir)/kyrc_vala.stamp
-	@if test -f $@; then :; else rm -f $(srcdir)/kyrc_vala.stamp; fi
+$(srcdir)/--save-temps: $(srcdir)/relay_vala.stamp
+	@if test -f $@; then :; else rm -f $(srcdir)/relay_vala.stamp; fi
 	@if test -f $@; then :; else \
-	  $(MAKE) $(AM_MAKEFLAGS) $(srcdir)/kyrc_vala.stamp; \
+	  $(MAKE) $(AM_MAKEFLAGS) $(srcdir)/relay_vala.stamp; \
 	fi
-$(srcdir)/kyrc_vala.stamp: config.vapi connection.vala main_window.vala sqlclient.vala server_manager.vala channel_tab.vala message.vala irc.vala kyrc.vala rich_text.vala
+$(srcdir)/relay_vala.stamp: config.vapi connection.vala main_window.vala sqlclient.vala server_manager.vala channel_tab.vala message.vala irc.vala relay.vala rich_text.vala
 	$(AM_V_at)rm -f $@ && echo stamp > $@-t
-	$(AM_V_VALAC)$(am__cd) $(srcdir) && $(VALAC) $(kyrc_VALAFLAGS) $(VALAFLAGS) -C config.vapi connection.vala main_window.vala sqlclient.vala server_manager.vala channel_tab.vala message.vala irc.vala kyrc.vala rich_text.vala
+	$(AM_V_VALAC)$(am__cd) $(srcdir) && $(VALAC) $(relay_VALAFLAGS) $(VALAFLAGS) -C config.vapi connection.vala main_window.vala sqlclient.vala server_manager.vala channel_tab.vala message.vala irc.vala relay.vala rich_text.vala
 	$(AM_V_at)mv -f $@-t $@
 
 mostlyclean-libtool:
@@ -703,19 +703,19 @@ maintainer-clean-generic:
 	-rm -f $(srcdir)/channel_tab.c
 	-rm -f $(srcdir)/connection.c
 	-rm -f $(srcdir)/irc.c
-	-rm -f $(srcdir)/kyrc.c
-	-rm -f $(srcdir)/kyrc_vala.stamp
 	-rm -f $(srcdir)/main_window.c
 	-rm -f $(srcdir)/message.c
+	-rm -f $(srcdir)/relay.c
+	-rm -f $(srcdir)/relay_vala.stamp
 	-rm -f $(srcdir)/rich_text.c
 	-rm -f $(srcdir)/server_manager.c
 	-rm -f $(srcdir)/sqlclient.c
 	-rm -f channel_tab.c
 	-rm -f connection.c
 	-rm -f irc.c
-	-rm -f kyrc.c
 	-rm -f main_window.c
 	-rm -f message.c
+	-rm -f relay.c
 	-rm -f rich_text.c
 	-rm -f server_manager.c
 	-rm -f sqlclient.c
