Changed asset loading code

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -330,7 +330,9 @@ top_srcdir = @top_srcdir@
 uidir = $(pkgdatadir)/ui
 ui_DATA = ui/relay.ui ui/server_window.ui
 assetsdir = $(pkgdatadir)/assets
-assets_DATA = assets/server_run.png
+assets_DATA = assets/server_run.png \
+	ui/relay.png
+
 AM_CPPFLAGS = \
     -DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
     -DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
