Testing change to README to README.md

--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@ AC_INIT(relay, 0.1)
 
 AC_CONFIG_HEADERS([config.h])
 
-AM_INIT_AUTOMAKE([1.11])
+AM_INIT_AUTOMAKE([1.11 foreign])
 
 AC_CONFIG_MACRO_DIR([m4])
 
