Stopped the tabs from becoming small Put an icon on the sidebar indicating if the channel/server is open or now Right click any tab to change tabs

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -47,7 +47,7 @@ relay_VALAFLAGS =  \
 relay_LDFLAGS = \
 	 -lm -lX11 -lglib-2.0 -Wl,--as-needed
 
-relay_LDADD = /usr/lib/*/libm.so /usr/lib/*/libX11.so $(RELAY_LIBS)
+relay_LDADD = -lm -lX11 $(RELAY_LIBS)
  
 
 
