--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,7 +8,7 @@ ui_DATA = ui/relay.ui ui/server_window.ui ui/relay.png
 
 assetsdir = $(pkgdatadir)/assets
 assets_DATA = ui/relay.png \
-	assets/server_icon.png \
+	assets/server_icon.svg \
     assets/paste.png \
     assets/theme.css \
     assets/assets/check@2.svg \
